--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,9 @@ header {
 body{
   background-image: url(../public/img1.jpg);
   background-size: cover;
+  background-repeat: no-repeat;
+  width: auto;
+  height: auto;
 }
 
 
